Ensure text remains visible during webfont load

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -9,6 +9,7 @@
   font-stretch: normal;
   font-style: normal;
   font-weight: normal;
+  font-display: swap
 }
 button {
   font-family: "Noto Sans", sans-serif;
